--- a/ProjectX/Base.lproj/Main.storyboard
+++ b/ProjectX/Base.lproj/Main.storyboard
@@ -87,10 +87,10 @@
             </objects>
             <point key="canvasLocation" x="-2852" y="170.46476761619192"/>
         </scene>
-        <!--View Controller-->
+        <!--Events Feed View Controller-->
         <scene sceneID="6CN-be-upY">
             <objects>
-                <viewController id="b5a-C1-RtS" sceneMemberID="viewController">
+                <viewController id="b5a-C1-RtS" customClass="EventsFeedViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UiJ-sR-2WF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -123,17 +123,53 @@
             </objects>
             <point key="canvasLocation" x="-2127" y="1415"/>
         </scene>
-        <!--View Controller-->
+        <!--Choose Events View Controller-->
         <scene sceneID="X2W-hS-A6o">
             <objects>
-                <viewController id="r4X-bz-L6V" sceneMemberID="viewController">
+                <viewController id="r4X-bz-L6V" customClass="ChooseEventsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GUF-7w-J7g">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dl4-u8-Qm4">
+                                <rect key="frame" x="166" y="118" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mGd-jQ-Ui8">
+                                <rect key="frame" x="16" y="81" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="axT-9o-AKG">
+                                <rect key="frame" x="166" y="161" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6RW-eU-MZP">
+                                <rect key="frame" x="317" y="81" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="qfP-aZ-v0Y"/>
                     </view>
                     <navigationItem key="navigationItem" id="vBp-h5-k84"/>
+                    <connections>
+                        <outlet property="Eventdescription" destination="axT-9o-AKG" id="rxr-EA-prQ"/>
+                        <outlet property="eventDate" destination="mGd-jQ-Ui8" id="ZmX-YW-ExV"/>
+                        <outlet property="eventName" destination="Dl4-u8-Qm4" id="NOz-Io-V4i"/>
+                        <outlet property="numAttendees" destination="6RW-eU-MZP" id="G2R-sM-pjm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mz8-mF-a4J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -215,11 +251,11 @@
             </objects>
             <point key="canvasLocation" x="-1186.4000000000001" y="170.46476761619192"/>
         </scene>
-        <!--Item-->
+        <!--Home-->
         <scene sceneID="2ie-wI-UGd">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zg0-N2-HFH" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" image="Home" id="r2n-WG-4gv"/>
+                    <tabBarItem key="tabBarItem" title="Home" id="r2n-WG-4gv"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="k02-vN-Xc4">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -253,10 +289,10 @@
             </objects>
             <point key="canvasLocation" x="613.60000000000002" y="1746.4767616191905"/>
         </scene>
-        <!--View Controller-->
+        <!--Groups View Controller-->
         <scene sceneID="S2a-Lw-1u0">
             <objects>
-                <viewController id="wz9-ph-suk" sceneMemberID="viewController">
+                <viewController id="wz9-ph-suk" customClass="GroupsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8UR-9l-WCw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -324,7 +360,4 @@
             <point key="canvasLocation" x="631" y="3319"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="Home" width="16" height="16"/>
-    </resources>
 </document>
